force-app/main/default/objects/TVOD__c/TVOD__c.object-meta.xml
<CustomObject>
    <label>TVOD</label>
    <nameField>
        <label>TVOD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TVODs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>