force-app/main/default/objects/TVOD__c/fields/Calidad__c.field-meta.xml
<CustomField>
    <fullName>Calidad__c</fullName>
    <label>Calidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>