force-app/main/default/objects/TVOD__c/fields/Categoria_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Cliente__c</fullName>
    <label>Categoría Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>