force-app/main/default/objects/TVOD__c/fields/Categoria_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Comercial__c</fullName>
    <label>Categoria Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>