force-app/main/default/objects/TVOD__c/fields/Cupon__c.field-meta.xml
<CustomField>
    <fullName>Cupon__c</fullName>
    <label>Cupón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>