force-app/main/default/objects/TVOD__c/fields/Dispositivo__c.field-meta.xml
<CustomField>
    <fullName>Dispositivo__c</fullName>
    <label>Dispositivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>