force-app/main/default/objects/TVOD__c/fields/Fecha_contratacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_contratacion__c</fullName>
    <label>Fecha de contratación</label>
    <type>DateTime</type>
</CustomField>