force-app/main/default/objects/TVOD__c/fields/ID_Externo_ProductoCliente__c.field-meta.xml
<CustomField>
    <fullName>ID_Externo_ProductoCliente__c</fullName>
    <externalId>true</externalId>
    <label>Producto Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>