force-app/main/default/objects/TVOD__c/fields/Nombre_de_campana__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_campana__c</fullName>
    <label>Nombre de campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>