force-app/main/default/objects/TVOD__c/fields/Product_ID_PlataformaTV__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_PlataformaTV__c</fullName>
    <label>Producto ID Plataforma TV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>